--- a/SimplePersistence.Model.Linq/src/SimplePersistence.Model.Linq/project.json
+++ b/SimplePersistence.Model.Linq/src/SimplePersistence.Model.Linq/project.json
@@ -13,34 +13,36 @@
   "releaseNotes": "",
 
   "frameworks": {
-    ".NETPortable,Version=v4.0,Profile=Profile328": {
-      "compilationOptions": {
-        "define": [ "PORTABLE40" ]
-      },
-      "frameworkAssemblies": {
-        "mscorlib": ""
-      }
-    },
     "dnxcore5": {
       "dependencies": {
+        "System.Linq": "4.0.0",
+        "System.Linq.Expressions": "4.0.0",
+        "System.Linq.Queryable": "4.0.0",
         "System.Runtime": "4.0.0"
       }
     },
     "dotnet": {
       "dependencies": {
+        "System.Linq": "4.0.0",
+        "System.Linq.Expressions": "4.0.0",
+        "System.Linq.Queryable": "4.0.0",
         "System.Runtime": "4.0.0"
       }
     },
+    "net20": { },
     "net35": { },
     "net40": { },
     "net45": { },
     "netcore45": {
       "dependencies": {
+        "System.Linq": "4.0.0",
+        "System.Linq.Expressions": "4.0.0",
+        "System.Linq.Queryable": "4.0.0",
         "System.Runtime": "4.0.0"
       }
     }
   },
   "dependencies": {
-    "SimplePersistence.Model": "3.0.2"
+    "SimplePersistence.Model": "3.0.3"
   }
 }
